# amortization

./: .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  Makefile  Pipfile  README.md  README.rst  amortization.py  appveyor.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  pypi.yml  python.yml  testpypi.yml
amortization/: __init__.py  amortize.py  amount.py  enums.py  period.py  schedule.py
tests/: test_amortization.py
