[tool.poetry]
name = "amortization"
version = "2.4.0"
repository = "https://github.com/roniemartinez/amortization"
description = "Python library for calculating amortizations and generating amortization schedules"
authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = [
    "amortization"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.urls]
"Donate" = "https://www.buymeacoffee.com/roniemartinez"

[tool.poetry.scripts]
amortize = "amortization.amortize:main"

[tool.poetry.dependencies]
python = "^3.8"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.7.8"
black = "^24.4"
isort = "^5.13.2"
mypy = "^1.10"
pyproject-flake8 = "^5.0.4"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
types-tabulate = "^0.9.0"

[tool.isort]
line_length = 120
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true
atomic = true

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = """
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/setup.py
"""

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]
extend-exclude = """
setup.py,
"""

[tool.pytest.ini_options]
addopts = """
    --doctest-modules \
    --cov=amortization \
    --cov-report=term-missing \
    --cov-report=xml \
    --cov-report=html \
    -vv \
    -x \
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
