[project]
name = "amortization"
version = "3.0.0"
description = "Python library for calculating amortizations and generating amortization schedules"
readme = "README.md"
authors = [
    { name = "Ronie Martinez", email = "ronmarti18@gmail.com" }
]
license = "MIT"
keywords = ["amortization"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",

    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.optional-dependencies]
cli = ["tabulate>=0.9.0"]

[project.urls]
Repository = "https://github.com/roniemartinez/amortization"
Donate = "https://www.buymeacoffee.com/roniemartinez"

[project.scripts]
amortize = "amortization.amortize:main"

[dependency-groups]
dev = [
    "amortization[cli]",
    "mypy>=1.14",
    "pre-commit>=4.2",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11",
    "types-tabulate>=0.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = """
    --doctest-modules \
    --cov=amortization \
    --cov-report=term-missing \
    --cov-report=xml \
    --cov-report=html \
    -vv \
    -x \
"""

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
