[metadata]
name=amortization
version=0.2.0
download_url=https://github.com/roniemartinez/amortization/tarball/0.2.0
description=Python library for calculating amortizations and generating amortization schedules
long_description=file:README.md
description-file=README.md
long_description_content_type=text/markdown
author=Ronie Martinez
author_email=ronmarti18@gmail.com
url=https://github.com/roniemartinez/amortization
license=MIT
license_files=LICENSE
classifiers=
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython

[options]
packages=
    amortization
install_requires=
    tabulate ~= 0.8.3

[options.entry_points]
console_scripts=
    amortize=amortization.amortize:main

[bdist_wheel]
universal=1